Change log next version
-----------------------

Change log 1.4.7 (2010-12-27)
-----------------------------
* The MemberModifier API now checks that the replacing method returns the same type and have the same number of parameters as the original method otherwise an IllegalArgumentException is thrown (issue 285).
* Fixed a bug which made it impossible to mock private methods with multiple arguments (issue 289).
* Removed some unwanted debug messages from the TestNG module.
* Updated javadoc in Whitebox and WhiteboxImpl.
* EasyMock and Mockito extension API now supports mocking new invocations with var args parameters when var args paramters is not the first parameter (issue 163).
* Various improvements to var args handling for both methods and constructors.
* Upgraded to Javassist 3.14 (issue 295).
* Upgraded junit module to use JUnit 4.8.2 (issue 296).
* You no longer need to prepare system classes that are not final and whose methods are not static, final or native in a special way (by prepare the class calling the system class method) (issue 300).
* Added method "defaultConstructorIn" to the MemberMatcher API so that you can e.g. suppress a default constructor using suppress(defaultConstructorIn(SomeClass.class)) (issue 302).
* PowerMock now cleans up EasyMock state after each test case which significantly decreases memory consumption.
* PowerMock now cleans up most Mockito state after each test case which decreases memory consumption.
* Major refactoring of the classloading module. It has been split up in a way that allows for different object deep-cloning mechanisms. The previous implementation is now called powermock-classloading-objenesis and there's also a new one called powermock-classload-xstream. The latter uses X-Stream for deep-cloning. This means that if you're using the PowerMock JUnit Rule you must also depend on one of the two deep-cloner implementations.

Change log 1.4.6 (2010-10-13)
-----------------------------